--- a/index.html
+++ b/index.html
@@ -1,22 +1,118 @@
 <!DOCTYPE html>
-<html>
+<html lang="ko">
 <head>
-    <meta charset="utf-8">
-    <title>P5.js 과제 모음</title>
+<meta charset="UTF-8">
+<title>P5.js 과제 모음</title>
+<style>
+    body {
+        margin: 0;
+        font-family: 'Pretendard', sans-serif;
+        display: flex;
+        height: 100vh;
+        overflow: hidden;
+    }
+
+    /* 왼쪽 사이드 */
+    #sidebar {
+        width: 260px;
+        background: #f4f4f4;
+        border-right: 1px solid #ddd;
+        padding: 25px;
+        box-sizing: border-box;
+        display: flex;
+        flex-direction: column;
+        gap: 30px;
+    }
+
+    h1 {
+        font-size: 22px;
+        margin: 0;
+        font-weight: 700;
+    }
+
+    h2 {
+        font-size: 16px;
+        margin: 15px 0 5px 0;
+        font-weight: 600;
+    }
+
+    ul {
+        list-style: none;
+        padding: 0;
+        margin: 0;
+    }
+
+    li {
+        margin: 6px 0;
+    }
+
+    a {
+        cursor: pointer;
+        color: black;
+        text-decoration: none;
+        font-size: 15px;
+    }
+
+    a:hover {
+        font-weight: bold;
+    }
+
+    /* 오른쪽 출력 영역 */
+    #viewer {
+        flex: 1;
+        background: white;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    iframe {
+        width: 100%;
+        height: 100%;
+        border: none;
+    }
+
+    .placeholder {
+        color: #888;
+        font-size: 20px;
+    }
+
+</style>
 </head>
 <body>
+
+<!-- 왼쪽 메뉴 -->
+<div id="sidebar">
     <h1>P5.js 과제 모음</h1>
 
-    <h2>1, 4번 과제</h2>
-    <ul>
-        <li><a href="hw1/index.html">과제 1</a></li>
-        <li><a href="hw4/index.html">과제 4</a></li>
-    </ul>
+    <div>
+        <h2>1, 4번 과제</h2>
+        <ul>
+            <li><a onclick="loadPage('hw1/index.html')">과제 1</a></li>
+            <li><a onclick="loadPage('hw4/index.html')">과제 4</a></li>
+        </ul>
+    </div>
 
-    <h2>2, 3번 과제</h2>
-    <ul>
-        <li><a href="hw2/index.html">과제 2</a></li>
-        <li><a href="hw3/index.html">과제 3</a></li>
-    </ul>
+    <div>
+        <h2>2, 3번 과제</h2>
+        <ul>
+            <li><a onclick="loadPage('hw2/index.html')">과제 2</a></li>
+            <li><a onclick="loadPage('hw3/index.html')">과제 3</a></li>
+        </ul>
+    </div>
+</div>
+
+<!-- 오른쪽 뷰 -->
+<div id="viewer">
+    <div class="placeholder">왼쪽에서 과제를 선택하세요.</div>
+</div>
+
+<script>
+function loadPage(path) {
+    document.getElementById('viewer').innerHTML =
+        `<iframe src="${path}"></iframe>`;
+}
+</script>
+
 </body>
 </html>
