--- a/hw1/index.html
+++ b/hw1/index.html
@@ -2,69 +2,55 @@
 <html>
 <head>
     <meta charset="utf-8">
-    <title>과제 1</title>
+    <title>과제 1 - 나무 그리기</title>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.9.0/lib/p5.js"></script>
 </head>
 <body>
 <script>
 function setup() {
-    createCanvas(600, 400);
-    noLoop();
-    rectMode(CENTER);
+  createCanvas(600, 400); 
+  background(240, 250, 240); 
+  noLoop(); 
 }
 
 function draw() {
-    background('#d0d8e0');
-    drawShirt();
-    drawFace();
-    drawHair();
-    drawFacialFeatures();
-}
+  // 나무 몸통
+  fill(139, 69, 19); 
+  noStroke(); 
+  rectMode(CENTER);
+  rect(width / 2, height / 2 + 50, 60, 150);
 
-function drawShirt() {
-    push();
-    translate(width / 2, height + 20);
-    fill('#4a4a4a');
-    noStroke();
-    rect(0, 0, 300, 300, 20);
-    fill('#d0d8e0');
-    ellipse(0, -140, 100, 80);
-    pop();
-}
+  // 잎
+  fill(34, 139, 34); 
+  stroke(0);
+  strokeWeight(2);
 
-function drawFace() {
-    push();
-    translate(width / 2, height / 2 + 20);
-    fill('#f3d3b9');
-    stroke(0);
-    strokeWeight(2);
-    ellipse(0, 0, 180, 220);
-    ellipse(-90, 20, 30, 50);
-    ellipse(90, 20, 30, 50);
-    pop();
-}
+  // 아래쪽 잎
+  triangle(
+    width / 2, height / 2 - 20,
+    width / 2 - 120, height / 2 + 70,
+    width / 2 + 120, height / 2 + 70
+  );
 
-function drawHair() {
-    push();
-    translate(width / 2, height / 2 + 20);
-    fill(10, 10, 10);
-    noStroke();
-    arc(0, -35, 190, 170, PI, TWO_PI, CHORD);
-    pop();
-}
+  // 중간 잎
+  triangle(
+    width / 2, height / 2 - 70,
+    width / 2 - 90, height / 2 + 20,
+    width / 2 + 90, height / 2 + 20
+  );
 
-function drawFacialFeatures() {
-    push();
-    translate(width / 2, height / 2 + 20);
-    fill(0);
-    ellipse(-40, 0, 22, 18);
-    ellipse(40, 0, 22, 18);
-    stroke(0);
-    strokeWeight(2);
-    noFill();
-    arc(0, 35, 20, 20, HALF_PI - 0.5, HALF_PI + 0.5);
-    arc(0, 65, 40, 30, 0, PI);
-    pop();
+  // 위쪽 잎
+  triangle(
+    width / 2, height / 2 - 120,
+    width / 2 - 60, height / 2 - 30,
+    width / 2 + 60, height / 2 - 30
+  );
+
+  // 땅
+  fill(100, 80, 50); 
+  noStroke();
+  rectMode(CORNER);
+  rect(0, height - 50, width, 50);
 }
 </script>
 </body>
